2005/01/04 Jamal James <teflon114@gmail.com>
* Added getCommandsHelp() to all irc plugins which will be msg'd to user on !help

2004/12/29 Morgan Christiansson <drftpd@mog.se>
* Fixed commandhandlers that were broken while refactoring.
  Thanks to M3ta for stacktrace.
* Added MAJORCHANGES.txt which will contain a summary of changes
  instead of a just a detailed changelog.

2004/12/23 Morgan Christiansson <drftpd@mog.se>
  Commiting stuff i did while on vacation.
* Added pattern path expressions from ant. makedir2 in perms.conf for now.
  Will replace the old glob-matching expressions.
* Changed zipscript.conf to only be loaded on startup & SITE RELOAD, moved formatting
  options to ListUtils.properties

2004/12/09 Teflon <teflon114@gmail.com>
* Created conf/zipscript.conf
* Moved CWD config from Dir.properties to zipscript.conf
* Made the sfv status folder completely configurable via zipscript.conf
* Finished adding all User attributes and defaults
* added complete.total to zipscript.conf. thanks M3ta

2004/12/07 Teflon <teflon114@gmail.com>
* Modified SITE GINFO to have more informative output
* Modified SITE INVITE to automatically identify the irc user
* Added SiteBot announcements for successful and failed invite events

2004/12/06 Morgan Christiansson <drftpd@mog.se>
* Removed jsx3 and xstream3 usermanagers, removed AutoFreeSpace.
  There were reports of them being broken and i'm not maintaining them anymore.
* Made ${log4j.configuration} reload when using SITE RELOAD.
* Fixed spelling fault, thanks M3ta.
* moved Pre, made it reset lastModified() on usage,
  made it reset lastModified() and ownership on
  the dir pre'd and not just the subdirs.

2004/12/06 Teflon <teflon114@gmail.com>
* Added IRC !ident command to identify irc users as their ftp users
* Modified IRC !invite command to automatically identify irc users
* Set javabeans to be the default usermanager in drftpd.conf
* Fixed plugin paths to point to the correct class in irc.conf
