@@ -13,3 +13,5 @@ In progress:
 * Dropped glob-style path permissions in favor of ants pattern path expressions.
 * Now requires java 5.0
 * Includes Teflon's ircusermanager which now uses dynamic user data.
+* Now requires ant to build, no more binary .class files.
+  JDK is required by ant, JRE is not sufficient.
